still cant figure out navbar button placement, portfolio links are styled, contact forms are ready

--- a/style.css
+++ b/style.css
@@ -75,6 +75,11 @@ background-color: beige;
    width: 100%;
  }
 
+ .linktext {
+  background-color: teal;
+  color: white;
+ }
+
   @media (min-width: 768px) {
 
 .col-md-3 {
